# proxy-update-python

./: .gitignore  Makefile  README.md  brownie-config.yaml  package.json  pyproject.toml
contracts/proxy/: ProxyAdminWrapper.sol  TransparentUpgradeableProxyWrapper.sol
scripts/: deploy.py  utils.py
